RESOLVED FIXED129266
AX: findMatchingObjects backwards start position inconsistent with forwards start position when startObject == nullptr.
https://bugs.webkit.org/show_bug.cgi?id=129266
Summary AX: findMatchingObjects backwards start position inconsistent with forwards s...
Samuel White
Reported 2014-02-24 12:40:40 PST
If a search is done in the forward direction and no start object is specified, the very first child of the container is the first result candidate. However, if search is done in the reverse direction and no start object is specified, the container isn't even considered (basically negating the search). In this case we should start the search from the very last element in the container so the very last child of the container is the first result candidate.
Attachments
Patch. (5.73 KB, patch)
2014-02-24 14:33 PST, Samuel White
no flags
Radar WebKit Bug Importer
Comment 1 2014-02-24 12:41:12 PST
Samuel White
Comment 2 2014-02-24 14:33:47 PST
WebKit Commit Bot
Comment 3 2014-02-24 16:03:25 PST
Comment on attachment 225098 [details] Patch. Clearing flags on attachment: 225098 Committed r164615: <http://trac.webkit.org/changeset/164615>
WebKit Commit Bot
Comment 4 2014-02-24 16:03:28 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.