AX: findMatchingObjects backwards start position inconsistent with forwards start position when startObject == nullptr. https://bugs.webkit.org/show_bug.cgi?id=129266

Reviewed by Chris Fleizach.

Source/WebCore:

When searching forward with no start object, the first thing considered is the first child of
the container. However, when searching backwards with no start object nothing in the container
is considered; this basically negates the search. This patch makes backwards searching without
a start object start from the last child of the container to match forward search expectations.

Test: platform/mac/accessibility/search-predicate-start-not-specified.html

* accessibility/AccessibilityObject.cpp:
(WebCore::AccessibilityObject::findMatchingObjects):

LayoutTests:

Added test to ensure that searching backward & forward without a start object produces similar
results. Backward will begin from the end of the container and forward will begin from the start.

* platform/mac/accessibility/search-predicate-start-not-specified-expected.txt: Added.
* platform/mac/accessibility/search-predicate-start-not-specified.html: Added.


Canonical link: https://commits.webkit.org/147323@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@164615 268f45cc-cd09-0410-ab3c-d52691b4dbfc